configured user secrets

--- a/src/AIConsoleApp/AIConsoleApp.csproj
+++ b/src/AIConsoleApp/AIConsoleApp.csproj
@@ -5,9 +5,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>70ab6745-bf3b-482a-915e-5d87c5ecd1ca</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.8" />
     <PackageReference Include="OpenAI" Version="2.4.0" />
   </ItemGroup>
 
